<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RootActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Blank"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"

        android:layout_height="200dp"

        android:layout_marginTop="4dp"
        android:contentDescription="@string/tree"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"

        android:columnCount="1"

        android:horizontalSpacing="8dp"
        android:outlineAmbientShadowColor="@android:color/holo_green_light"

        android:outlineSpotShadowColor="@android:color/holo_green_dark"
        android:rowCount="4"
        android:stretchMode="columnWidth"

        android:verticalSpacing="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <android.support.v7.widget.FitWindowsLinearLayout android:layout_width="match_parent">

            <Button
                android:id="@+id/T"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/T"
                android:textSize="24sp" />

            <Button
                android:id="@+id/E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/E"
                android:textSize="24sp" />

            <Button
                android:id="@+id/R"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/R"
                android:textSize="24sp" />

            <Button
                android:id="@+id/F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/F"
                android:textSize="24sp" />
        </android.support.v7.widget.FitWindowsLinearLayout>

        <android.support.v7.widget.FitWindowsLinearLayout>

            <Button
                android:id="@+id/A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/A"
                android:textSize="24sp" />

            <Button
                android:id="@+id/M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/M"
                android:textSize="24sp" />

            <Button
                android:id="@+id/L"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/L"
                android:textSize="24sp" />

            <Button
                android:id="@+id/W"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/W"
                android:textSize="24sp" />
        </android.support.v7.widget.FitWindowsLinearLayout>

        <android.support.v7.widget.FitWindowsLinearLayout>

            <Button
                android:id="@+id/I"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/I"
                android:textSize="24sp" />

            <Button
                android:id="@+id/U"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/U"
                android:textSize="24sp" />

            <Button
                android:id="@+id/S"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/S"
                android:textSize="24sp" />

            <Button
                android:id="@+id/O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/O"
                android:textSize="24sp" />
        </android.support.v7.widget.FitWindowsLinearLayout>

    </GridLayout>

    <Button
        android:id="@+id/onclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onNext"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>